fixed Deprecated method usage IOUtils.toByteArray(InputStream)